# fastapi-travel-tax

./: .gitignore  README.md  pyproject.toml
fastapi-travel-tax/: main.py
fastapi-travel-tax/models/: tax_models.py
fastapi-travel-tax/routes/: tax_routes.py
fastapi_travel_tax/: main.py
fastapi_travel_tax/models/: __init__.py
fastapi_travel_tax/routes/: __init__.py
fastapi_travel_tax/schemas/: tax_schemas.py
fastapi_travel_tax/services/: __init__.py  db.py
scripts/: run-api-dev
tests/: test_api.py
