[tool.poetry]
name = "fastapi-travel-tax"
version = "0.1.0"
description = ""
authors = ["Solahuddeen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
fastapi-cli = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
